# cross-roads-ai

./: .copilot  .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_server.bat  cross-road.md  cross-road.puml  cross-road.yml  main.cpp  task-list.md
features/: basic_simulation.feature  control_algorithms.feature  decoupled_ui.feature  kpis.feature  live_maps.feature  orm_persistence.feature  persistence_and_editor.feature  recording_playback.feature  safety_checker.feature
server/: server.cpp  store.h
src/: ControlAlgorithm.cpp  ControlAlgorithm.h  DomainModel.cpp  DomainModel.h  Intersection.cpp  Intersection.h  KPIReport.cpp  KPIReport.h  LightState.h  MapData.cpp  MapData.h  Playback.cpp  Playback.h  Recorder.cpp  Recorder.h  RoadApproach.cpp  RoadApproach.h  SafetyChecker.cpp  SafetyChecker.h  Sensor.cpp  Sensor.h  SignalPhase.cpp  SignalPhase.h  Simulation.cpp  Simulation.h  TrafficGenerator.cpp  TrafficGenerator.h  TrafficLight.cpp  TrafficLight.h  UIClient.cpp  UIClient.h  Vehicle.h
